Update blog by adding a home page and additional links to the blog

--- a/blog/templates/login-form.html
+++ b/blog/templates/login-form.html
@@ -39,6 +39,13 @@
 
       <input type="submit">
     </form>
+    <br>
+    <div class = "row">
+      <div class = "col-xs-2"> 
+        <a href="/signup"><button type="button" class="btn btn-info">Sign Up</button></a>
+     </div>
+
+    </div>
   </body>
 
 </html>
