--- a/blog/templates/signup-form.html
+++ b/blog/templates/signup-form.html
@@ -65,6 +65,11 @@
 
       <input type="submit">
     </form>
+    <br>
+    <div class = "row">
+      <div class = "col-xs-2"> 
+        <a href="/login"><button type="button" class="btn btn-info">Login</button></a>
+     </div>
   </body>
 
 </html>
