--- a/blog/templates/delete-comment.html
+++ b/blog/templates/delete-comment.html
@@ -1,9 +1,8 @@
 {% extends "base.html" %}
 {% block content %}
-	
 	{% if comment %}
 		<h4>Now Deleting</h4>
-	    {{ comment.render() | safe }}
+	    This comment
 	    <br><br>
 	    {{comment.delete()}}
 	{% else %}
